--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Личная страница: Тарасов Радомир Бахромович</title>
+    <title>Личная страница: ARDev1161 </title>
     <!-- Bootstrap -->
 	<link href="./123/bootstrap.css" rel="stylesheet">
 	<link href="./123/styles.css" rel="stylesheet" type="text/css">
