--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Личная страница: ARDev1161 </title>
+    <title>Личная страница: ARDev1161</title>
     <!-- Bootstrap -->
 	<link href="./123/bootstrap.css" rel="stylesheet">
 	<link href="./123/styles.css" rel="stylesheet" type="text/css">
@@ -21,10 +21,10 @@
 	  <img class="img-responsive" style="margin: 0 auto;" src="./123/git.png" alt="">
           <p id="digital_watch" style="color: #000;align: center; font-size: 120%; font-weight: bold;border: 1px solid black;"></p>
  </div>
-	  <h1 class="title">Тарасов Радомир Бахромович</h1>
+	  <h1 class="title">ARDev1161</h1>
   <div class="underheadtext">Личная страница</div>
-  <h2 class="subtitle">Оглавление</h2>
-  <!--Оглавление  -->
+  <h2 class="subtitle">Проекты</h2>
+  <!--Проекты  -->
   <div id="accordion" class="ui-accordion ui-widget ui-helper-reset" role="tablist">
 	<h3 class="ui-accordion-header ui-state-default ui-accordion-header-active ui-state-active ui-corner-top ui-accordion-icons" role="tab" id="ui-id-1" aria-controls="ui-id-2" aria-selected="true" aria-expanded="true" tabindex="0"><span class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-s"></span>Лабораторная работа №1: Экосистема разработки ПО с открытым кодом</h3>
     <div style="padding: 0px; margin: 0px; display: block; height: 709px;" class="ui-accordion-content ui-helper-reset ui-widget-content ui-corner-bottom ui-accordion-content-active" id="ui-id-2" aria-labelledby="ui-id-1" role="tabpanel" aria-hidden="false">
