--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<script type="text/javascript" src="script/clock.js"> </script>
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,7 +12,6 @@
 	<link href="./123/jquery-ui.structure.css" rel="stylesheet" type="text/css">
     <!-- Jquery UI End -->
   </head>
-  <body onload="digitalWatch()">
   <div class="container">
   <div class="row">
   <div class="col-lg-12">
@@ -30,9 +28,7 @@
     <div style="padding: 0px; margin: 0px; display: block; height: 709px;" class="ui-accordion-content ui-helper-reset ui-widget-content ui-corner-bottom ui-accordion-content-active" id="ui-id-2" aria-labelledby="ui-id-1" role="tabpanel" aria-hidden="false">
         <div class="theorypractice">Цели</div>
         <ul class="menulist">
-            <li><a href="https://github.com/ARDev1161">1. Зарегистрироваться на GitHub</a></li>
-            <li>2. Создать персональную веб страницу-отчёт с использованием <a href="https://github.com/stankin/inet-2017/blob/master/idm-17-02/Tarasov/index.html">HTML</a>, <a href="https://github.com/stankin/inet-2017/tree/master/idm-17-02/Tarasov/123">CSS</a>, <a href="https://github.com/stankin/inet-2017/blob/master/idm-17-02/Tarasov/script/clock.js">JS</a></li>
-            <li><a href="https://stankin.github.io/inet-2017/idm-17-02/Tarasov/index.html">3. Загрузить персональную веб страницу-отчёт в репозиторий ИДМ-17-02 по курсу «Интернет-технологии» на GitHub.</a></li>
+            <li><a href="https://github.com/ARDev1161/AmurClient">AMUR Client</a></li>
         </ul>
     </div>
 	<h3 class="ui-accordion-header ui-state-default ui-corner-all ui-accordion-icons" role="tab" id="ui-id-3" aria-controls="ui-id-4" aria-selected="false" aria-expanded="false" tabindex="-1"><span class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"></span>Лабораторная работа №2: Разработка простого web приложения </h3>
@@ -60,7 +56,7 @@
     </div>
 </div>
   
-  <!--Оглавление End -->
+  <!--Проекты End -->
 </div>
  </div>
  <div class="row" style="margin:15px;">
