--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
   <h2 class="subtitle">Проекты</h2>
   <!--Проекты  -->
   <div id="accordion" class="ui-accordion ui-widget ui-helper-reset" role="tablist">
-	<h3 class="ui-accordion-header ui-state-default ui-accordion-header-active ui-state-active ui-corner-top ui-accordion-icons" role="tab" id="ui-id-1" aria-controls="ui-id-2" aria-selected="true" aria-expanded="true" tabindex="0"><span class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-s"></span>Лабораторная работа №1: Экосистема разработки ПО с открытым кодом</h3>
+	<h3 class="ui-accordion-header ui-state-default ui-accordion-header-active ui-state-active ui-corner-top ui-accordion-icons" role="tab" id="ui-id-1" aria-controls="ui-id-2" aria-selected="true" aria-expanded="true" tabindex="0"><span class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-s"></span>Сервисный робот АМУР</h3>
     <div style="padding: 0px; margin: 0px; display: block; height: 709px;" class="ui-accordion-content ui-helper-reset ui-widget-content ui-corner-bottom ui-accordion-content-active" id="ui-id-2" aria-labelledby="ui-id-1" role="tabpanel" aria-hidden="false">
         <div class="theorypractice">Цели</div>
         <ul class="menulist">
             <li><a href="https://github.com/ARDev1161/AmurClient">AMUR Client</a></li>
         </ul>
     </div>
-	<h3 class="ui-accordion-header ui-state-default ui-corner-all ui-accordion-icons" role="tab" id="ui-id-3" aria-controls="ui-id-4" aria-selected="false" aria-expanded="false" tabindex="-1"><span class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"></span>Лабораторная работа №2: Разработка простого web приложения </h3>
+	<h3 class="ui-accordion-header ui-state-default ui-corner-all ui-accordion-icons" role="tab" id="ui-id-3" aria-controls="ui-id-4" aria-selected="false" aria-expanded="false" tabindex="-1"><span class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"></span>Сравнительная программа алгоритмов выделения заднего фона из OpenCV</h3>
     <div style="padding: 0px; margin: 0px; display: none; height: 709px;" class="ui-accordion-content ui-helper-reset ui-widget-content ui-corner-bottom" id="ui-id-4" aria-labelledby="ui-id-3" role="tabpanel" aria-hidden="true">
         <div class="theorypractice">Требование к web приложению</div> 
 		<ul class="menulist">
@@ -46,7 +46,7 @@
             <li>3. Прописать стили страницы. Исходный код на CSS.</a></li>
         </ul>
     </div>
-    <h3 class="ui-accordion-header ui-state-default ui-corner-all ui-accordion-icons" role="tab" id="ui-id-5" aria-controls="ui-id-6" aria-selected="false" aria-expanded="false" tabindex="-1"><span class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"></span>Лабораторная работа №3: Настройка локальной сети передачи данных</h3>
+    <h3 class="ui-accordion-header ui-state-default ui-corner-all ui-accordion-icons" role="tab" id="ui-id-5" aria-controls="ui-id-6" aria-selected="false" aria-expanded="false" tabindex="-1"><span class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"></span>Программа для записи показаний аккумулятора для Arduino</h3>
     <div style="padding: 0px; margin: 0px; display: none; height: 709px;" class="ui-accordion-content ui-helper-reset ui-widget-content ui-corner-bottom" id="ui-id-6" aria-labelledby="ui-id-5" role="tabpanel" aria-hidden="true">
         <div class="theorypractice">Настройка коммутаторов и маршрутизаторов</div>
     </div>
