--- a/index.html
+++ b/index.html
@@ -33,17 +33,17 @@
     </div>
 	<h3 class="ui-accordion-header ui-state-default ui-corner-all ui-accordion-icons" role="tab" id="ui-id-3" aria-controls="ui-id-4" aria-selected="false" aria-expanded="false" tabindex="-1"><span class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"></span>Сравнительная программа алгоритмов выделения заднего фона из OpenCV</h3>
     <div style="padding: 0px; margin: 0px; display: none; height: 709px;" class="ui-accordion-content ui-helper-reset ui-widget-content ui-corner-bottom" id="ui-id-4" aria-labelledby="ui-id-3" role="tabpanel" aria-hidden="true">
-        <div class="theorypractice">Требование к web приложению</div> 
+        <div class="theorypractice">Что то ещё</div> 
 		<ul class="menulist">
             <li>1. </a></li>
             <li>2. </a></li>
             <li>3. </a></li>
         </ul>
-		<div class="theorypractice">Цели</div> 
+		<div class="theorypractice">И ещё</div> 
 		<ul class="menulist">
-            <li>1. Собрать команду для разработки веб-приложения (SPA) и распределить роли.</a></li>
-            <li>2. Сделать разметку страницы по макету.</a></li>
-            <li>3. Прописать стили страницы. Исходный код на CSS.</a></li>
+            <li>1. </a></li>
+            <li>2. </a></li>
+            <li>3. </a></li>
         </ul>
     </div>
     <h3 class="ui-accordion-header ui-state-default ui-corner-all ui-accordion-icons" role="tab" id="ui-id-5" aria-controls="ui-id-6" aria-selected="false" aria-expanded="false" tabindex="-1"><span class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"></span>Программа для записи показаний аккумулятора для Arduino</h3>
