--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
           <p id="digital_watch" style="color: #000;align: center; font-size: 120%; font-weight: bold;border: 1px solid black;"></p>
  </div>
 	  <h1 class="title">ARDev1161</h1>
-  <div class="underheadtext">Личная страница</div>
+  <div class="underheadtext">https://www.linkedin.com/in/radtarasov/ linkedin/</div>
+  <div class="underheadtext"><a href="https://www.linkedin.com/in/radtarasov/"> linkedin </a> </div>
   <h2 class="subtitle">Проекты</h2>
   <!--Проекты  -->
   <div id="accordion" class="ui-accordion ui-widget ui-helper-reset" role="tablist">
